--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   </style>
 </head>
 <body>
-<p class="p1"><span class="s1">This privacy policy covers the use of the 'Play Tube & Video Tube','Max Player','MP4 Player' and 'MPlayer' applications.</span></p>
+<p class="p1"><span class="s1">This privacy policy covers the use of the 'Dance & emote' applications.</span></p>
 <p class="p2"><span class="s1"></span><br></p>
-<p class="p1"><span class="s1">It may not be applicable to other software produced or released by wenjoyAI.</span></p>
+<p class="p1"><span class="s1">It may not be applicable to other software produced or released by motionvideo.</span></p>
 <p class="p2"><span class="s1"></span><br></p>
-<p class="p1"><span class="s1">wenjoyAI does not collect any personal information. We only collect usage analytics by Google Firebase SDK, these data only used for APP improvement. APP also has Admob SDK for playing AD. It may collect some statistic, but wenjoyAI does not have access to any information stored within.<span class="Apple-converted-space"> </span></span></p>
+<p class="p1"><span class="s1">motionvideo does not collect any personal information. We only collect usage analytics by Google Firebase SDK, these data only used for APP improvement. APP also has Admob SDK for playing AD. It may collect some statistic, but motionvideo does not have access to any information stored within.<span class="Apple-converted-space"> </span></span></p>
 </body>
 </html>
